--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ jobs:
         # Check ansible version
         - ansible --version
         # Create ansible.cfg with correct roles_path
-        - printf '[defaults]\nroles_path=../' > ansible.cfg
+        #- printf '[defaults]\nroles_path=../' > ansible.cfg
+        - "{ echo '[defaults]'; echo 'roles_path = ../'; echo 'local_tmp = ~/.ansible/tmp'; } >> ansible.cfg"
       script:
         # Basic role syntax check
         - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
