--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
         - ansible --version
         # Create ansible.cfg with correct roles_path
         #- printf '[defaults]\nroles_path=../' > ansible.cfg
-        - "{ echo '[defaults]'; echo 'roles_path = ../'; echo 'local_tmp = ~/.ansible/tmp'; echo 'remote_tmp = ~/.ansible/tmp_remote'; echo 'allow_world_readable_tmpfiles=True'; echo 'allow_world_readable_tmpfiles=True'; } > ansible.cfg"
+        - "{ echo '[defaults]'; echo 'roles_path = ../'; echo 'local_tmp = ~/.ansible/tmp'; echo 'remote_tmp = ~/.ansible/tmp_remote'; echo 'allow_world_readable_tmpfiles=True';  } > ansible.cfg"
       script:
         # Basic role syntax check
         - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
