--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ jobs:
         apt:
           packages:
             - python3-pip
+      env:
+        - TMPDIR=~/tmp
+
       install:
         # Install ansible
         - pip3 install ansible flask
@@ -16,9 +19,13 @@ jobs:
         - ansible --version
         # Create ansible.cfg with correct roles_path
         #- printf '[defaults]\nroles_path=../' > ansible.cfg
+        - 
         - "{ echo '[defaults]'; echo 'roles_path = ../'; echo 'local_tmp = ~/.ansible/tmp'; echo 'remote_tmp = ~/.ansible/tmp_remote';  } > ansible.cfg"
       script:
         # Basic role syntax check
+        - id
+        - whoami
+        - mkdir -p $TMPDIR
         - ls -la /tmp
         - touch /tmp/arne.txt
         - echo apa > /tmp/arne.txt
@@ -26,7 +33,7 @@ jobs:
         - cat /tmp/arne.txt
         - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
         # Running tests
-        #- ansible-playbook tests/test.yml -i tests/inventory -vvv
+        - ansible-playbook tests/test.yml -i tests/inventory -vvv
       after_failure:
         - touch ~/mock_ci.pid && cat ~/mock_ci.pid
         - touch ~/mock_ci.log && cat ~/mock_ci.log
