--- a/.travis.yml
+++ b/.travis.yml
@@ -20,27 +20,12 @@ jobs:
         - ansible --version
         # Create ansible.cfg with correct roles_path
         #- printf '[defaults]\nroles_path=../' > ansible.cfg
-        - "{ echo '[defaults]'; echo 'roles_path = ../'; echo 'local_tmp = ~/.ansible/tmp'; echo 'remote_tmp = ~/.ansible/tmp_remote';  } > ansible.cfg"
+        - "{ echo '[defaults]'; echo 'roles_path = ../'; } > ansible.cfg"
       script:
         # Basic role syntax check
-        - id
-        - whoami
-        - getent passwd root
-        - grep -i umask /etc/login.defs
-        - echo Umask for me
-        - umask
-        - echo Umask for root
-        - sudo bash -c "umask"
-        - echo $TMPDIR
-        - mkdir -p $TMPDIR
-        - ls -la /tmp
-        - touch /tmp/arne.txt
-        - echo apa > /tmp/arne.txt
-        - ls -la /tmp
-        - cat /tmp/arne.txt
         - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
         # Running tests
-        - #ansible-playbook tests/test.yml -i tests/inventory -vvv
+        - ansible-playbook tests/test.yml -i tests/inventory -vvv
       after_failure:
         - touch ~/mock_ci.pid && cat ~/mock_ci.pid
         - touch ~/mock_ci.log && cat ~/mock_ci.log
