--- a/tests/test.yml
+++ b/tests/test.yml
@@ -38,7 +38,7 @@
 - hosts: localhost
   roles:
     - ansible-gitlab-runner
-  become: true
+#  become: true
 #  become_user: root
 
 - hosts: localhost
